@@ -12,21 +12,25 @@ BUG: 347219
 FIXED-IN: 16.04
 ---
 
-
+diff --git a/src/lib/KAccountsMacros.cmake b/src/lib/KAccountsMacros.cmake
+index dfcb636..c3d18c1 100644
 --- a/src/lib/KAccountsMacros.cmake
 +++ b/src/lib/KAccountsMacros.cmake
-@@ -4,5 +4,6 @@
+@@ -2,12 +2,14 @@ function(kaccounts_add_provider provider_in_file)
+     get_filename_component(provider_filename ${provider_in_file} NAME_WE)
+     set(provider_file ${CMAKE_CURRENT_BINARY_DIR}/${provider_filename}.provider)
      execute_process(COMMAND intltool-merge -x -u --no-translations ${provider_in_file} ${provider_file})
 -    install(FILES ${provider_file} DESTINATION ${ACCOUNTS_PROVIDERS_DIR})
-+    # The suffix must match whatever we set for $XDG_CURRENT_DESKTOP
++# The suffix must match whatever we set for $XDG_CURRENT_DESKTOP
 +    install(FILES ${provider_file} DESTINATION ${ACCOUNTS_PROVIDERS_DIR}/kde/)
  endfunction()
  
  function(kaccounts_add_service service_file_in)
-@@ -11,12 +11,13 @@
+     get_filename_component(service_filename ${service_file_in} NAME_WE)
+     set(service_file ${CMAKE_CURRENT_BINARY_DIR}/${service_filename}.service)
      execute_process(COMMAND intltool-merge -x -u --no-translations ${service_file_in} ${service_file})
 -    install(FILES ${service_file} DESTINATION ${ACCOUNTS_SERVICES_DIR})
-+    # The suffix must match whatever we set for $XDG_CURRENT_DESKTOP
++# The suffix must match whatever we set for $XDG_CURRENT_DESKTOP
 +    install(FILES ${service_file} DESTINATION ${ACCOUNTS_SERVICES_DIR}/kde/)
  endfunction()
  
