@@ -5,6 +5,7 @@ kaccounts-integration (4:15.12.3-0ubuntu3) UNRELEASED; urgency=medium
   * Add series file. 
   * Fix patch so it applies to this source. 
   * Again... 
+  * Re-generate a new patch using 15.12.3 tag upstream. 
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Sat, 23 Apr 2016 10:18:44 -0700
 
